ported node cluster

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,10 @@
       "type": "node",
       "outputCapture": "std",
       "env": {
-        "NEST_DEBUG": "true"
+        "NEST_DEBUG": "true",
+        "NODE_ENV": "dev",
+        "NOTIFYBC_WORKER_PROCESS_COUNT": "1",
+        "NODE_TLS_REJECT_UNAUTHORIZED": "0"
       }
     },
     {
