--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "notify-bc",
-  "version": "0.0.1",
-  "description": "",
+  "version": "4.1.9",
+  "dbSchemaVersion": "0.8.0",
+  "description": "A versatile notification API server",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -23,6 +24,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.8",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
