--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "lodash": "^4.17.21",
+    "mongoose": "^7.4.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
