--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,26 +26,22 @@
   "eslint.nodePath": "./node_modules",
   "eslint.validate": ["javascript", "typescript"],
   "cSpell.words": [
-    "Booter",
-    "Defang",
-    "ECONNECTION",
-    "IDAQAB",
-    "NDRs",
-    "Ntfctn",
-    "PVCs",
-    "Vuex",
     "addmeta",
     "addt",
     "apitoken",
     "automigrate",
+    "Booter",
     "codecopy",
     "copyfiles",
     "createsend",
+    "Defang",
     "dovyp",
+    "ECONNECTION",
     "feedparser",
     "getopt",
     "gsmtp",
     "hsts",
+    "IDAQAB",
     "ioredis",
     "jmespath",
     "jmespath's",
@@ -55,8 +51,12 @@
     "mailparser",
     "materialdesignicons",
     "mymaster",
+    "NDRs",
+    "nlike",
     "nonexpired",
+    "Ntfctn",
     "preauthorize",
+    "PVCs",
     "quickstart",
     "randexp",
     "remoting",
@@ -75,6 +75,7 @@
     "unsubscriptions",
     "usercredential",
     "userdisplayname",
+    "Vuex",
     "yourprojectname"
   ]
 }
