--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "lodash": "^4.17.21",
     "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.4.5",
