--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "lodash": "^4.17.21",
     "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.4.5",
+    "nodemailer": "^6.9.5",
+    "nodemailer-direct-transport": "^3.3.2",
     "pluralize": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
