--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "lodash": "^4.17.21",
     "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.4.5",
+    "node-rsa": "^0.4.1",
     "nodemailer": "^6.9.5",
     "nodemailer-direct-transport": "^3.3.2",
     "pluralize": "^8.0.0",
+    "randexp": "^0.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "underscore.string": "^3.3.6"
