--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-validator": "^0.14.0",
     "crypto-random-string": "^3.3.0",
     "ip-range-check": "^0.2.0",
+    "jmespath": "f-w/jmespath.js#semver:^1.0",
     "lodash": "^4.17.21",
     "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.4.5",
