--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
+    "async": "^3.2.4",
     "bcryptjs": "^2.4.3",
     "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
