--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "commander": "^11.1.0",
     "cron": "^3.1.5",
     "crypto-random-string": "^3.3.0",
     "feedparser": "^2.2.10",
@@ -50,6 +51,7 @@
     "ip-range-check": "^0.2.0",
     "jmespath": "f-w/jmespath.js#semver:^1.0",
     "lodash": "^4.17.21",
+    "mailparser": "^3.6.5",
     "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.4.5",
     "nodemailer": "^6.9.5",
