--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "commander": "^11.1.0",
     "cron": "^3.1.5",
     "crypto-random-string": "^3.3.0",
     "feedparser": "^2.2.10",
@@ -60,6 +59,7 @@
     "randexp": "^0.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "smtp-server": "^3.13.0",
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
