--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-validator": "^0.14.0",
     "cron": "^3.1.5",
     "crypto-random-string": "^3.3.0",
+    "ejs": "^3.1.9",
     "feedparser": "^2.2.10",
     "ioredis": "^5.3.2",
     "ip-range-check": "^0.2.0",
