--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,8 @@
       "env": {
         "NEST_DEBUG": "true",
         "NODE_ENV": "dev",
-        "NOTIFYBC_WORKER_PROCESS_COUNT": "1",
-        "NODE_TLS_REJECT_UNAUTHORIZED": "0"
+        "NOTIFYBC_WORKER_PROCESS_COUNT": "1"
+        // "NODE_TLS_REJECT_UNAUTHORIZED": "0"
       }
     },
     {
