--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "cron": "^3.1.5",
     "crypto-random-string": "^3.3.0",
     "ejs": "^3.1.9",
     "feedparser": "^2.2.10",
+    "helmet": "^7.0.0",
     "ioredis": "^5.3.2",
     "ip-range-check": "^0.2.0",
     "jmespath": "f-w/jmespath.js#semver:^1.0",
@@ -56,12 +58,14 @@
     "mailparser": "^3.6.5",
     "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.4.5",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
     "nodemailer-direct-transport": "^3.3.2",
     "pluralize": "^8.0.0",
     "randexp": "^0.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "serve-favicon": "^2.5.0",
     "smtp-server": "^3.13.0",
     "underscore.string": "^3.3.6"
   },
