--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "commander": "^11.1.0",
     "compression": "^1.7.4",
     "cron": "^3.1.5",
     "crypto-random-string": "^3.3.0",
+    "csvtojson": "^2.0.10",
     "ejs": "^3.1.9",
     "feedparser": "^2.2.10",
     "helmet": "^7.0.0",
