--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
       "outputCapture": "std",
       // "console": "internalConsole",
       "env": {
-        "jestTestTimeout": "999999999"
+        "notifyBcJestTestTimeout": "9999999999"
       }
     },
     {
