--- a/package.json
+++ b/package.json
@@ -29,9 +29,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.ts"
   },
-  "//": [
-    "todo: compare dependencies"
-  ],
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -67,8 +64,10 @@
     "randexp": "^0.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "semver": "^7.5.4",
     "serve-favicon": "^2.5.0",
     "smtp-server": "^3.13.0",
+    "twilio": "^3.7.0",
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
