--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "nest build",
+    "build:client": "yarn --cwd client build",
+    "build:docs": "yarn --cwd docs install && yarn --cwd docs build",
+    "postbuild": "yarn build:client",
+    "install:client": "yarn --cwd client install",
+    "install:docs": "yarn --cwd docs install",
+    "postinstall": "yarn install:client",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
