--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,7 @@
       "name": "Test",
       "runtimeExecutable": "yarn",
       "autoAttachChildProcesses": true,
-      "runtimeArgs": ["test:e2e", "subscription"],
+      "runtimeArgs": ["test:e2e", "redis"],
       "outputCapture": "std",
       // "console": "internalConsole",
       "env": {
