--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "postbuild": "yarn build:client",
     "install:client": "yarn --cwd client install",
     "install:docs": "yarn --cwd docs install",
-    "postinstall": "yarn install:client",
+    "postinstall": "yarn install:client --production=false",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -36,6 +36,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.ts"
   },
   "dependencies": {
+    "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
@@ -77,7 +78,6 @@
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.2.8",
     "@types/bcryptjs": "^2.4.3",
