--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "postbuild": "yarn build:client",
     "install:client": "yarn --cwd client install",
     "install:docs": "yarn --cwd docs install",
-    "postinstall": "yarn install:client --production=false",
+    "postinstall": "yarn install:client",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -36,7 +36,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.ts"
   },
   "dependencies": {
-    "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
@@ -78,6 +77,7 @@
     "underscore.string": "^3.3.6"
   },
   "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.2.8",
     "@types/bcryptjs": "^2.4.3",
@@ -93,7 +93,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
-    "redis-memory-server": "^0.10.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
@@ -101,6 +100,9 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "optionalDependencies": {
+    "redis-memory-server": "^0.10.0"
   },
   "jest": {
     "moduleFileExtensions": [
