--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -22,13 +22,13 @@ version: 1.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: 4.1
+appVersion: '5.0'
 
 dependencies:
   - name: mongodb
-    version: 10.7.1
+    version: 14.3.2
     repository: https://charts.bitnami.com/bitnami
   - name: redis
-    version: 14.7.2
+    version: 18.4.0
     repository: https://charts.bitnami.com/bitnami
     condition: redis.enabled
