increased mongodb readinessProbe timeoutSeconds

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -101,7 +101,8 @@ mongodb:
     enabled: false
   arbiter:
     enabled: false
-
+  readinessProbe:
+    timeoutSeconds: 10
 configMap:
   config.local.js: |-
     module.exports = {};
