get e2e code coverage working

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.ts"
+    "test:e2e": "jest --config ./test/jest-e2e.ts",
+    "test:e2e:cov": "jest --config ./test/jest-e2e.ts --coverage"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
