--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notify-bc",
-  "version": "5.0.9",
+  "version": "5.0.10",
   "dbSchemaVersion": "0.9.0",
   "description": "A versatile notification API server",
   "author": "f-w",
@@ -43,6 +43,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "async": "^3.2.4",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
