updated bulk import

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,7 @@
     "letsencrypt",
     "mailparser",
     "materialdesignicons",
+    "mongoimport",
     "mongorestore",
     "mymaster",
     "NDRs",
