--- a/helm/templates/route-web.yaml
+++ b/helm/templates/route-web.yaml
@@ -6,7 +6,9 @@ metadata:
   labels:
     {{- include "NotifyBC.labels" . | nindent 4 }}
   annotations:
+    {{- if .Values.route.web.ip_whitelist }}
     haproxy.router.openshift.io/ip_whitelist: {{ .Values.route.web.ip_whitelist }}
+    {{- end }}
     haproxy.router.openshift.io/timeout: 24d
   name: {{ $fullName }}-web
 spec:
