--- a/helm/templates/network-policy-db-ingress.yaml
+++ b/helm/templates/network-policy-db-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-db-ingress
+  name: {{ include "NotifyBC.fullname" . }}-allow-db-ingress
   labels:
     {{- include "NotifyBC.labels" . | nindent 4 }}
 spec:
