--- a/helm/templates/route-smtp.yaml
+++ b/helm/templates/route-smtp.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.service.smtp.enabled -}}
 {{- if .Capabilities.APIVersions.Has "route.openshift.io/v1/Route" }}
 {{- $fullName := include "NotifyBC.fullname" . -}}
 apiVersion: route.openshift.io/v1
@@ -17,4 +18,5 @@ spec:
   to:
     kind: Service
     name: {{ $fullName }}
+{{- end }}
 {{- end }}
