DESCW-2005 implementing mongodb updates, and additional updates

--- a/helm/templates/network-policy-redis-ingress.yaml
+++ b/helm/templates/network-policy-redis-ingress.yaml
@@ -19,5 +19,6 @@ spec:
         - podSelector:
             matchLabels:
               app.kubernetes.io/name: {{ include "NotifyBC.name" . }}-app
+              app.kubernetes.io/instance: {{ .Release.Name }}
   policyTypes:
     - Ingress
