--- a/helm/templates/hpa-cron.yaml
+++ b/helm/templates/hpa-cron.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.hpa.notify-bc-cron.enabled -}}
+{{- if .Values.hpa.notify-bc-cron.enabled }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
