--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "nest build",
-    "build:client": "yarn --cwd client build",
-    "build:docs": "yarn --cwd docs install && yarn --cwd docs build",
-    "postbuild": "yarn build:client",
-    "install:client": "yarn --cwd client install",
-    "install:docs": "yarn --cwd docs install",
-    "postinstall": "yarn install:client",
+    "build:client": "cd client && npm run build",
+    "build:docs": "cd docs && npm i && npm run build",
+    "postbuild": "npm run build:client",
+    "install:client": "cd client && npm i",
+    "install:docs": "cd docs && npm i",
+    "postinstall": "npm run install:client",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
