--- a/.github/workflows/buildTestPublishContainerDeploy.yml
+++ b/.github/workflows/buildTestPublishContainerDeploy.yml
@@ -24,10 +24,10 @@ jobs:
           node-version: ${{ vars.NODE_VERSION }}
       - name: Install, build, lint and test:e2e 🔧
         run: |
-          yarn install
-          yarn build
-          yarn lint
-          yarn test:e2e
+          npm install
+          npm run build
+          npm run lint
+          npm run test:e2e
   publish-container:
     if: ${{ github.repository == 'bcgov/NotifyBC' && github.event_name != 'pull_request' }}
     needs: install-build-lint-and-test
