--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/terminus": "^10.2.3",
     "async": "^3.2.4",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
