--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test:e2e:cov": "jest --config ./test/jest-e2e.ts --coverage"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/mongoose": "^10.0.6",
@@ -44,7 +45,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/terminus": "^10.2.3",
     "async": "^3.2.4",
-    "axios": "^1.6.2",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "bottleneck": "^2.19.5",
     "class-transformer": "^0.5.1",
