--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -142,6 +142,14 @@ cronJob:
   timeZone: UTC
   persistence:
     size: 5Gi
+  resources:
+    requests:
+      cpu: "50m"
+      memory: "256Mi"
+    limits:
+      cpu: "250m"
+      memory: "1Gi"
+
 
 hpa:
   cron:
