--- a/.github/workflows/buildTestPublishContainerDeploy.yml
+++ b/.github/workflows/buildTestPublishContainerDeploy.yml
@@ -26,7 +26,7 @@ jobs:
           npm run lint
           npm run test:e2e
   publish-container:
-    if: ${{ github.repository == 'bcgov/NotifyBC' && github.event_name != 'pull_request' }}
+    if: ${{ github.repository == 'bcgov/des-notifybc' }}
     needs: install-build-lint-and-test
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +41,7 @@ jobs:
           images: |
             ghcr.io/bcgov/des-notify-bc
           tags: |
+            type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
