Added includeForks option to renovate.json to allow Renovate to scan this repo

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,6 @@
   "description": "Presets from https://github.com/bcgov/renovate-config",
   "extends": [
     "github>bcgov/renovate-config"
-  ]
+  ],
+  "includeForks": true
 }
