Feature/descw 2461 fix chart releaser versioning (#37)
* Set helm repo to /helm instead of /docs/helm so it doesn't get overwritten when ghPages workflow runs
* Locked docs vuepress version to 2.0.0-beta.66 since any higher version fails to build
* Added chart_version input to manual workflow dispatch

--- a/.github/workflows/chartReleaser.yml
+++ b/.github/workflows/chartReleaser.yml
@@ -1,17 +1,21 @@
 name: Release Charts
 
 on:
-  push:
-    branches:
-      - v4
-    paths:
-      - helm/Chart.yaml
+  release:
+    types:
+      - published
   workflow_dispatch:
+    inputs:
+      chart_version:
+        description: 'The chart version to create. Must be a valid semver string and should indicate that it is not a release chart version (eg. 5.1.2-pr36).'
+        required: true
 
 jobs:
   release:
     # depending on default permission settings for your org (contents being read-only or read-write for workloads), you will have to add permissions
     # see: https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
+    env:
+      CHART_VERSION: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.chart_version || null }}"
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -23,4 +27,5 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           charts_dir: ./
           branch: gh-pages
-          target_dir: docs/helm
+          target_dir: helm
+          chart_version: ${{ env.CHART_VERSION }}
