--- a/docs/package.json
+++ b/docs/package.json
@@ -15,8 +15,8 @@
   "license": "MIT",
   "devDependencies": {
     "@snippetors/vuepress-plugin-code-copy": "^1.2.3",
-    "@vuepress/plugin-docsearch": "^2.0.0-beta.66",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.66",
     "markdown-it-include": "^2.0.0",
-    "vuepress": "^2.0.0-beta.66"
+    "vuepress": "2.0.0-beta.66"
   }
 }
