DESCW-2428 change backup storage class to netap-file-backup

--- a/helm/templates/pvc.yaml
+++ b/helm/templates/pvc.yaml
@@ -13,3 +13,4 @@ spec:
     requests:
       storage: {{ .Values.cronJob.persistence.size }}
 {{ end }}
+  storageClassName: {{ .Values.cronJob.storageClassName }}
