Added support for PRs in chartReleaser workflow (#42)
* Added support for PRs in chartReleaser workflow
* Added path to image build to avoid rebuilding image when src hasn't changed
* Improved wording of workflow input description

--- a/.github/workflows/buildTestPublishContainerDeploy.yml
+++ b/.github/workflows/buildTestPublishContainerDeploy.yml
@@ -4,6 +4,13 @@ on:
     types:
       - published
   pull_request:
+    paths:
+      - 'src/**'
+      - 'client/**'
+      - 'server/**'
+      - 'test/**'
+      - 'package-lock.json'
+      - 'Dockerfile'
   workflow_dispatch:
 jobs:
   install-build-lint-and-test:
