Bug/descw 2469 chartreleaser release event (#43)
* Fixed bug with chart tag version when CHART_VERSION env variable is false (like during a release event)

--- a/.github/workflows/chartReleaser.yml
+++ b/.github/workflows/chartReleaser.yml
@@ -34,4 +34,4 @@ jobs:
           charts_dir: ./
           branch: gh-pages
           target_dir: helm
-          chart_version: ${{ format('{0}{1}', steps.chart.outputs.version, env.CHART_VERSION || '') }}
+          chart_version: ${{ format('{0}{1}', steps.chart.outputs.version, (env.CHART_VERSION != 'false' && env.CHART_VERSION || '')) }}
