--- a/.github/workflows/buildTestPublishContainerDeploy.yml
+++ b/.github/workflows/buildTestPublishContainerDeploy.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ vars.NODE_VERSION }}
       - name: Install, build, lint and test:e2e 🔧
         run: |
-          npm install
+          npm ci
           npm run build
           npm run lint
           npm run test:e2e
