Added date stamp to log filenames

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ lerna-debug.log*
 
 # NotifyBC
 **/*.local.*
+!/helm/values.local.yaml
 /server/database/**
 !/server/database/.keep
 /server/certs/**
