Updated values.local.yaml to override PVC storageClassNames and application image

--- a/helm/values.local.yaml
+++ b/helm/values.local.yaml
@@ -1,6 +1,12 @@
+image:
+  repository: ghcr.io/bcgov/des-notify-bc
+  pullPolicy: Always
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: 'latest'
 fluentbit:
   persistence:
-    size: 1Gi
-    #storageClassName: local-storage
-#cronJob:
-  #storageClassName: local-storage
+    # Overrides netapp-file-backup which is only valid in OpenShift.
+    storageClassName: hostpath
+cronJob:
+  # Overrides netapp-file-backup which is only valid in OpenShift.
+  storageClassName: hostpath
