--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test:e2e:cov": "jest --config ./test/jest-e2e.ts --coverage"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^10.2.1",
     "@nestjs/common": "^10.4.5",
     "@nestjs/core": "^10.4.5",
     "@nestjs/mongoose": "^10.0.10",
@@ -47,6 +48,7 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "bottleneck": "^2.19.5",
+    "bullmq": "^5.21.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
