--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "nodemailer-direct-transport": "^3.3.2",
     "pluralize": "^8.0.0",
     "randexp": "^0.5.3",
+    "redis-memory-server": "^0.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "semver": "^7.5.4",
@@ -100,9 +101,6 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
-  },
-  "optionalDependencies": {
-    "redis-memory-server": "^0.10.0"
   },
   "jest": {
     "moduleFileExtensions": [
