--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -15,31 +15,11 @@ data:
             {{- end }}
           }
         },
-        throttle: {
-          /* Redis clustering options */
-          datastore: 'ioredis',
-          clientOptions: {
-            name: "mymaster",
-            password: process.env.REDIS_PASSWORD,
-            sentinelPassword: process.env.REDIS_PASSWORD,
-            sentinels: [
-              { host: process.env.REDIS_SERVICE_NAME },
-            ],
-          },
-        },
       },
-      sms:{
-        throttle: {
-          /* Redis clustering options */
-          datastore: 'ioredis',
-          clientOptions: {
-            name: "mymaster",
-            password: process.env.REDIS_PASSWORD,
-            sentinelPassword: process.env.REDIS_PASSWORD,
-            sentinels: [
-              { host: process.env.REDIS_SERVICE_NAME },
-            ],
-          },
+      queue: {
+        connection: {
+          host: process.env.REDIS_SERVICE_NAME,
+          password: process.env.REDIS_PASSWORD,
         },
       },
     }
