--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -143,26 +143,13 @@ cronJob:
     size: 5Gi
 
 redis:
-  enabled: true
   sentinel:
     enabled: true
-    downAfterMilliseconds: 4000
-    failoverTimeout: 2000
-    podSecurityContext:
-      enabled: false
-    containerSecurityContext:
-      enabled: false
+    # downAfterMilliseconds: 4000
+    # failoverTimeout: 2000
   master:
     persistence:
       enabled: false
-    podSecurityContext:
-      enabled: false
-    containerSecurityContext:
-      enabled: false
   replica:
     persistence:
-      enabled: false
-    podSecurityContext:
-      enabled: false
-    containerSecurityContext:
       enabled: false
