--- a/docs/package.json
+++ b/docs/package.json
@@ -10,13 +10,20 @@
   "repository": "https://github.com/bcgov/NotifyBC",
   "scripts": {
     "dev": "vuepress dev",
-    "build": "vuepress build"
+    "build": "vuepress build",
+    "clean-dev": "vuepress dev --clean-cache",
+    "update-package": "npx vp-update"
   },
   "license": "MIT",
+  "type": "module",
   "devDependencies": {
-    "@snippetors/vuepress-plugin-code-copy": "^1.2.3",
-    "@vuepress/plugin-docsearch": "^2.0.0-beta.66",
+    "@vuepress/bundler-vite": "2.0.0-rc.18",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.63",
+    "@vuepress/theme-default": "2.0.0-rc.63",
     "markdown-it-include": "^2.0.0",
-    "vuepress": "^2.0.0-beta.66"
+    "mermaid": "^11.4.1",
+    "sass-embedded": "^1.82.0",
+    "vuepress": "2.0.0-rc.18",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.60"
   }
 }
