use sentinels in Helm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
     "materialdesignicons",
     "mongoimport",
     "mongorestore",
+    "mymaster",
     "NDRs",
     "nlike",
     "nonexpired",
